# InstagramBot

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
instabot/: __init__.py  logging_config.py  scheduler.py
instabot/instagram/: __init__.py  analysis.py  client.py  collectors.py
instabot/storage/: __init__.py  csv_store.py
instabot/telegram_report/: __init__.py  bot.py  chat_store.py  reporter.py  sections.py
tests/: test_chat_store.py
